--- a/src/olympia/abuse/templates/admin/abuse/abusereport/minimum_reports_count_filter.html
+++ b/src/olympia/abuse/templates/admin/abuse/abusereport/minimum_reports_count_filter.html
@@ -14,6 +14,7 @@
         </li>
         <li {% if not all_choice.selected %}class="selected"{% endif %}>
             <input type="number"
+                   min="0"
                    value="{{ spec.value|default_if_none:'' }}"
                    name="{{ spec.parameter_name }}"
                    id="id_{{ spec.parameter_name}}" />
