--- a/src/olympia/devhub/templates/devhub/new-landing/components/overview.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/overview.html
@@ -9,6 +9,6 @@
         you already have all the necessary skills to make a great add-on.
       {% endtrans %}
     </p>
-    <a href="https://developer.mozilla.org/en-US/Add-ons" class="Button Button--primary">{{ _('Learn How to Make an Add-on') }}</a>
+    <a href="https://developer.thunderbird.net/add-ons/about-add-ons" class="Button Button--primary">{{ _('Learn How to Make an Add-on') }}</a>
   </div>
 </section>
