--- a/src/olympia/templates/copyright.html
+++ b/src/olympia/templates/copyright.html
@@ -12,7 +12,7 @@
       </a>
       {% block extra_footer_links %}
         &nbsp;|&nbsp;<a href="https://status.mozilla.org">{{ _('Site Status')}}</a>
-        &nbsp;|&nbsp;<a href="https://developer.mozilla.org/en-US/Add-ons/AMO/Policy/Contact">{{ _('Report a bug')}}</a>
+        &nbsp;|&nbsp;<a href="https://github.com/thundernest/addons-server/issues/new">{{ _('Report a bug')}}</a>
       {% endblock %}
     {% endblock %}
   </p>
