--- a/src/olympia/templates/footer.html
+++ b/src/olympia/templates/footer.html
@@ -2,9 +2,9 @@
   <ul>
     <li>{{ _('get to know <b>add-ons</b>') }}</li>
     <li><a href="{{ url('pages.about') }}">{{ _('About') }}</a></li>
-    <li><a href="http://blog.mozilla.com/addons">{{ _('Blog') }}</a></li>
+    <li><a href="https://blog.mozilla.org/thunderbird/">{{ _('Blog') }}</a></li>
     <li class="footer-devhub-link"><a href="{{ url('devhub.index') }}">{{ _('Developer Hub') }}</a></li>
-    <li><a href="https://discourse.mozilla-community.org/c/add-ons">{{ _('Forum') }}</a></li>
+    <li><a href="https://discourse.mozilla.org/c/thunderbird/addons">{{ _('Forum') }}</a></li>
   </ul>
 </div>
 <div id="footer-content">
