--- a/src/olympia/devhub/templates/devhub/agreement.html
+++ b/src/olympia/devhub/templates/devhub/agreement.html
@@ -27,5 +27,6 @@
   </div>
   {% else %}
     {{ agreement_form.non_field_errors() }}
+    <p><a href="https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions/Developer_accounts">{{ _('More information on Developer Accounts') }}</a></p>
   {% endif %}
 </form>
