--- a/src/olympia/reviewers/templates/reviewers/addon_details_box.html
+++ b/src/olympia/reviewers/templates/reviewers/addon_details_box.html
@@ -1,4 +1,7 @@
   <div class="addon-info-and-previews">
+    {% if addon_name %}
+      <h2>{{ addon_name }}</h2>
+    {% endif %}
     {% if not addon.has_per_version_previews %}
     <div class="addon-previews">
       {% if addon.current_previews %}
@@ -80,7 +83,7 @@
           </tr>
           {% endif %}
           {# XXX future feature: 'Localizations' ... #}
-          <tr>
+          <tr class="meta-rating">
             <th>{{ _('Rating') }}</th>
             <td>{{ reviews_link(addon) }}</td>
           </tr>
@@ -155,6 +158,7 @@
   </div>{# /addon-info-and-previews #}
 
   {% if was_auto_approved %}
+  <div class="auto-approved-extra">
     {% if reports %}
       <h3><a href="{{ url('reviewers.abuse_reports', addon.slug) }}">{{_('Abuse Reports ({num})')|format_html(num=reports.paginator.count|numberfmt) }}</a></h3>
       {% include "reviewers/includes/abuse_reports_list.html" %}
@@ -164,6 +168,7 @@
       <h3><a href="{{ url('addons.ratings.list', addon.slug) }}">{{_('Bad User Ratings ({num})')|format_html(num=user_ratings.paginator.count|numberfmt) }}</a></h3>
       {% include "reviewers/includes/user_ratings_list.html" %}
     {% endif %}
+  </div>
   {% endif %}
 
   {% if addon.has_per_version_previews %}
