Change notification email recipient

--- a/src/olympia/devhub/templates/devhub/includes/addon_details.html
+++ b/src/olympia/devhub/templates/devhub/includes/addon_details.html
@@ -24,7 +24,7 @@
                          "receiving automatic updates."),
     amo.STATUS_DISABLED: _("Your add-on was disabled by a site administrator and is no "
                            "longer shown in our gallery. If you have any questions, "
-                           "please email amo-admins@mozilla.org."),
+                           "please email amo-admins@mozilla.com."),
     amo.STATUS_DELETED: '',
     'invisible': _("Your add-on won't be included in search results, and its "
                    "listing page will indicate you disabled it. New version "
