--- a/src/olympia/devhub/templates/devhub/addons/edit/describe.html
+++ b/src/olympia/devhub/templates/devhub/addons/edit/describe.html
@@ -202,7 +202,7 @@
                       {{ cats|join(' &middot; ')|safe }}
                     </p>
                     <p>
-                      {% trans email='amo-admins@mozilla.org' %}
+                      {% trans email='amo-admins@mozilla.com' %}
                         Categories cannot be changed while your add-on is
                         featured for this application. Please email
                         <a href="mailto:{{ email }}">{{ email }}</a> if there is
@@ -218,7 +218,7 @@
                 {{ cat_form.category }}
                 {% if cat_form.disabled %}
                     <p>
-                      {% trans email='amo-admins@mozilla.org' %}
+                      {% trans email='amo-admins@mozilla.com' %}
                         Categories cannot be changed while your add-on is
                         featured. Please email
                         <a href="mailto:{{ email }}">{{ email }}</a> if there is
