Fix links used in abuse report admin tool to be absolute
The admin lives on an instance that doesn't support the rest of the
app so any links pointing to outside the admin need to be absolute.

--- a/src/olympia/ratings/templates/ratings/impala/reviews_link.html
+++ b/src/olympia/ratings/templates/ratings/impala/reviews_link.html
@@ -7,7 +7,7 @@
   {% with num=addon.total_ratings %}
     {% if num %}
       {{ addon.average_rating|float|stars }}
-      <a href="{{ base }}">({{ num|numberfmt }})</a>
+      <a href="{{ base|absolutify }}">({{ num|numberfmt }})</a>
     {% else %}
       <b>{{ _('Not yet rated') }}</b>
     {% endif %}
