Make sure File.get_url_path() returns a relative path
Also make sure get_absolute_url() is used as much as possible when we
want the absolute url, instead of doing it ourselves using absolutify.

--- a/src/olympia/devhub/templates/devhub/includes/version_file.html
+++ b/src/olympia/devhub/templates/devhub/includes/version_file.html
@@ -1,6 +1,6 @@
 <tr>
   <td>
-    <a href="{{ file.get_url_path('devhub') }}">
+    <a href="{{ file.get_absolute_url('devhub') }}">
       {{ file.pretty_filename() }}</a>
   </td>
   <td>{{ file.size|filesizeformat(binary=True) }}</td>
