--- a/src/olympia/devhub/templates/devhub/addons/submit/done.html
+++ b/src/olympia/devhub/templates/devhub/addons/submit/done.html
@@ -65,7 +65,7 @@
   </p>
   <p>
     {% set file = uploaded_version.all_files[-1] %}
-    <a class="button" id="download-addon-url" download href="{{ file.get_url_path('devhub') }}">{{
+    <a class="button" id="download-addon-url" download href="{{ file.get_absolute_url('devhub') }}">{{
         _("Download {0}")|format_html(file.pretty_filename()) }}</a>
   </p>
 {% endif %}
