--- a/src/olympia/devhub/templates/devhub/addons/activity.html
+++ b/src/olympia/devhub/templates/devhub/addons/activity.html
@@ -29,6 +29,14 @@
             <span class="action {{ log_action_class(item.action) }}"></span>
             {{ item }}
           </p>
+          <p class="timestamp">
+            {% trans user=item.author_name,
+                   ago=item.created|timesince,
+                   iso=item.created|isotime,
+                   pretty=item.created|datetime %}
+            <time datetime="{{ iso }}" title="{{ pretty }}">{{ ago }}</time>
+            {% endtrans %}
+          </p>
 
         </div>
         {% endfor %}
