--- a/src/olympia/devhub/templates/devhub/addons/dashboard.html
+++ b/src/olympia/devhub/templates/devhub/addons/dashboard.html
@@ -43,6 +43,11 @@
         {% for item in addon_items %}
           <li class="item">
             {{ item }}
+            <span class="activity-timestamp">
+            {% trans user=item.user|user_link, ago=item.created|timesince %}
+            {{ ago }}
+            {% endtrans %}
+            </span>
           </li>
         {% endfor %}
       </ul>
