remove user_link

--- a/src/olympia/devhub/templates/devhub/addons/activity.html
+++ b/src/olympia/devhub/templates/devhub/addons/activity.html
@@ -35,6 +35,7 @@
                    iso=item.created|isotime,
                    pretty=item.created|datetime %}
             <time datetime="{{ iso }}" title="{{ pretty }}">{{ ago }}</time>
+            by {{ user }}
             {% endtrans %}
           </p>
 
