--- a/src/olympia/devhub/templates/devhub/addons/dashboard.html
+++ b/src/olympia/devhub/templates/devhub/addons/dashboard.html
@@ -44,7 +44,7 @@
           <li class="item">
             {{ item }}
             <span class="activity-timestamp">
-            {% trans user=item.user, ago=item.created|timesince %}
+            {% trans user=item.author_name, ago=item.created|timesince %}
             {{ ago }} by {{ user }}
             {% endtrans %}
             </span>
