--- a/src/olympia/devhub/templates/devhub/new-landing/components/my-addons.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/my-addons.html
@@ -1,8 +1,10 @@
 {% macro render_status(addon) %}
   {% if addon.status != amo.STATUS_DISABLED and addon.disabled_by_user %}
     {% set status_text = _('Invisible') %}
+  {% elif addon.is_recommended and addon.status == amo.STATUS_APPROVED %}
+      {% set status_text = _("Approved and recommended") %}
   {% else %}
-    {% set status_text = addon.STATUS_CHOICES[addon.status] %}
+    {% set status_text = addon.get_status_display() %}
   {% endif %}
 
   {% set url = addon.get_dev_url('versions') %}
