--- a/static/css/restyle/restyle.less
+++ b/static/css/restyle/restyle.less
@@ -82,6 +82,12 @@ masthead.submit-theme,
   margin-top: 20px;
 }
 
+#theme-preview-details {
+  display: block;
+  width: 640px;
+  height: 92px;
+}
+
 .addon-description-header,
 .addon-details .secondary.addon-vitals {
   background: none;
