Switch themes pages to browse and list Web Extension Themes.

--- a/src/olympia/addons/templates/addons/impala/listing/items.html
+++ b/src/olympia/addons/templates/addons/impala/listing/items.html
@@ -2,6 +2,9 @@
 {% for addon in addons %}
   <div class="item addon">
     <div class="info">
+    {% if addon.type == 10 %}
+      <img src="{{ addon.current_previews[0].image_url }}" width="442px" height="60px">
+    {% endif %}
       <h3>
         {% set dl_url = addon.get_url_path() %}
         {% if dl_src %}
