Fix theme search and category listing in site nav.

--- a/src/olympia/search/templates/search/personas.html
+++ b/src/olympia/search/templates/search/personas.html
@@ -24,7 +24,7 @@
   <div class="featured">
     {% if pager.object_list %}
       <div class="featured-inner">
-        {{ persona_grid(pager.object_list) }}
+        {{ impala_addon_listing_items(pager.object_list) }}
       </div>
       {% if pager.paginator.num_pages > 1 %}
         <div class="listing-footer">{{ pager|paginator }}</div>
