--- a/src/olympia/devhub/templates/devhub/addons/includes/cc_license_chooser.html
+++ b/src/olympia/devhub/templates/devhub/addons/includes/cc_license_chooser.html
@@ -53,7 +53,7 @@
               </label>
             </li>
           </ul>
-          <div id="persona-license">
+          <div id="theme-license">
             <p>{{ _('Your Add-on will be released under the following license:') }}</p>
             <p id="cc-license" class="license icon"></p>
             <p class="select-license">
