--- a/static/css/devhub/forms.less
+++ b/static/css/devhub/forms.less
@@ -169,7 +169,7 @@ p.addon-submit-distribute {
         }
     }
 
-    #persona-license {
+    #theme-license {
         background-color: darken(#FCFDFE, 10%);
         border-radius: 5px;
         padding: 1em;
