--- a/static/css/devhub/listing.less
+++ b/static/css/devhub/listing.less
@@ -73,7 +73,7 @@
             color: @dark-gray;
         }
     }
-    .info.statictheme, .info.persona {
+    .info.statictheme {
         padding-left: 148px;
         h3 img {
             left: 10px;
@@ -84,9 +84,6 @@
             object-position: left;
         }
     }
-    .info.persona h3 img {
-         object-position: right;
-    }
 }
 
 .html-rtl .listing .item {
@@ -94,7 +91,7 @@
         padding-left: 0px;
         padding-right: 102px;
     }
-    .info.statictheme, .info.persona {
+    .info.statictheme {
         padding-left: 0px;
         padding-right: 148px;
     }
