--- a/static/css/devhub/submission.less
+++ b/static/css/devhub/submission.less
@@ -78,7 +78,7 @@ ol.submit-addon-progress.unlisted {
     padding-top: .8em;
 }
 
-.addon-submission-process #persona-license {
+.addon-submission-process #theme-license {
     margin-bottom: 1em;
 }
 
